resend and mailhog setup, structure updated, design system tweaks

--- a/src/lib/styles/cookieBanner.postcss
+++ b/src/lib/styles/cookieBanner.postcss
@@ -5,9 +5,9 @@
   --cc-font-size: 16px;
   --cc-bg: #fff;
   --cc-z-index: 2147483647;
-  --cc-text: 240 10% 3.9%;
-  --cc-border-radius: 1rem;
-  --cc-btn-primary-bg: 0 0% 100%;
+  --cc-text: #2d4156;
+  --cc-border-radius: 0.45rem;
+  --cc-btn-primary-bg: #2d4156;
   --cc-btn-primary-text: var(--cc-bg);
   --cc-btn-primary-hover-bg: #1d2e38;
   --cc-btn-primary-hover-text: var(--cc-btn-primary-text);
@@ -32,7 +32,6 @@
   --cc-webkit-scrollbar-bg: #cfd5db;
   --cc-webkit-scrollbar-bg-hover: #9199a0;
 }
-
 .dark {
   --cc-bg: #181b1d;
   --cc-text: #d8e5ea;
