--- a/src/app.postcss
+++ b/src/app.postcss
@@ -100,7 +100,26 @@
     @apply text-sm font-medium leading-none;
   }
 
-  /* .muted {
-    @apply text-sm text-muted-foreground;
-  } */
+  /* Custom Scrollbar */
+  /* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: var(--accent) var(--background);
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    @apply bg-foreground/40;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    @apply bg-accent border-x-4 border-y-2 border-solid border-foreground/40;
+    border-radius: 10px;
+    /* border: 3px solid #ffffff; */
+  }
 }
